[package]
name = "linear-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
thiserror = "2.0"
tabled = "0.17"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
