[package]
name = "linear-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
directories = "6.0"
thiserror = "2.0"
tabled = "0.20"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
